# AutoReclipper

./: README.md  app_gui.py  background.py  main.py  managers.py  pyproject.toml  requirements.txt  services.py  utils.py
.github/workflows/: bandit.yml
templates/: Simplification.json  corrector.json  describe_image.json  simplification (RU).json  summarize (RU).json  summarize.json  translate_to_en.json
